[tool.poetry]
name = "muse"
version = "0.1.0"
description = ""
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
openai = "^0.27.6"
replicate = "^0.8.1"
docopt = "^0.6.2"
streamlit-drawable-canvas = "^0.9.2"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
